--- a/static/src/assets/scss/style.scss
+++ b/static/src/assets/scss/style.scss
@@ -34,8 +34,8 @@
    ---------------------------------------------------------- */
 //@import "base/font";
 //@import "base/reset";
-//@import "base/base";
-@import "base/theme";
+@import "base/base";
+
 
 /* parts
    ---------------------------------------------------------- */
@@ -70,7 +70,7 @@
 @import "pages/index";
 
 
-
+@import "base/theme";
 
 
 /*---------------------------------------------------------------------
