最新状態に反映

--- a/static/src/assets/scss/base/_base.scss
+++ b/static/src/assets/scss/base/_base.scss
@@ -273,11 +273,13 @@ blockquote,
 dl,
 figure,
 table,
-p,
 ul,
 ol,
 form {
   margin-bottom: 2.5rem;
+}
+p{
+  margin-bottom: 1.5rem;
 }
 
 textarea,
