--- a/wp-content/themes/yui/style.css
+++ b/wp-content/themes/yui/style.css
@@ -5,11 +5,10 @@
  Author:       conti
  Author URI:   https://cntlog.net/
  Template:     understrap
- Version:      0.0.1.1
+ Version:      0.0.1.2
  License: GNU General Public License v2 or later
  License URI: http://www.gnu.org/licenses/gpl-2.0.html
  Text Domain:  yui
- Tags: one-column, custom-menu, featured-images, theme-options, translation-ready
- GitHub Theme URI: holger1411/understrap-child
+ Tags: one-column, custom-menu, theme-options
 
 */
