--- a/wp-content/themes/yui/style.css
+++ b/wp-content/themes/yui/style.css
@@ -9,6 +9,6 @@
  License: GNU General Public License v2 or later
  License URI: http://www.gnu.org/licenses/gpl-2.0.html
  Text Domain:  yui
- Tags: one-column, custom-menu, theme-options
+ Tags: one-column,Two Columns, custom-menu, theme-options
 
 */
